# Kursavaya_2

./: .gitignore  database.ini  main.py  pyproject.toml
src/: api.py  db_manager.py  files_work.py
