[tool.poetry]
name = "kursovaya2"
version = "0.1.0"
description = ""
authors = ["PinderKingui1488 <ananimuszahar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
config = "^0.5.1"
psycopg2 = "^2.9.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
